--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <div class="banner-box">
             <h4>crazy deals</h4>
             <h2>buy 1 get 1 free</h2>
-            <span>The best classic dress is on sale at cara</span>
+            <span>The best classic dress is ona</span>
             <button class="white">Learn more</button>
         </div>
         
