--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="shop.html">shop</a></li>
                 <li><a href="blog.html">blog</a></li>
-                <li><a href="about.html">about</a></li>
+                <li><a href="about.html">about us</a></li>
                 <li><a href="contact.html">contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-arrow-down"></i></a></li>
                 <a href="" id="close"><i class="fa-solid fa-xmark"></i></a>
