--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <img src="/images/products/f1.jpg" calss="product-img">
                 <div class="des">
                     <span>dazumi</span>
-                    <h5 class="product-title">Cartoon Astronaut T-shirts</h5>
+                    <h5 class="product-title">Cartoon Astronaut</h5>
                     <div class="star">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
