--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="fe-box">
             <img src="/images/features/f5.png" alt="">
-            <h6>Happy Sell</h6>
+            <h6>Happy Selling</h6>
         </div>
         <div class="fe-box">
             <img src="/images/features/f6.png" alt="">
