--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     <section id="contact-details" class="section-p1">
         <div class="details">
             <span>GET IN TOUCH</span>
-            <h2>visit one of our agency location or contact us today</h2>
+            <h2>visit one of our agency location or contact us</h2>
             <h3>Head Office</h3>
             <div>
                 <li>
