--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <img src="/images/about/a6.jpg" alt="">
         <div>
             <h2>Who We Are?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos sapiente. Enim quam nobis in explicabo id dolor dolorum sit, distinctio, qui ab, aut similique. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis ipsa aut soluta fuga molestiae porro nostrum vitae facilis assumenda ipsam! Aspernatur at deleniti et vel distinctio eos temporibus sint voluptatum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam nobis in explicabo id dolor dolorum sit, distinctio, qui ab, aut similique. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis ipsa aut soluta fuga molestiae porro nostrum vitae facilis assumenda ipsam! Aspernatur at deleniti et vel distinctio eos temporibus sint voluptatum.</p>
             <abbr title="">Lorem ipsum dolor sit amet,  adipisicing elit. Quam, aliquid rem quod commodi aliquam saepe laudantium libero reiciendis, debitis eligendi quisquam eos eius nobis aut perspiciatis praesentium a harum sunt? lo</abbr>
             
             <br><br>
