--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@
             </div>
             <div class="blog-details">
                 <h4>Must have skater girl items</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni quidem commodi quo molestias nulla nobis soluta eveniet, laudantium nam architecto perferendis, veniam possimus, voluptatem laboriosam facere debitis. Commodi, omnis architecto!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni quidem commodi nulla nobis soluta eveniet, laudantium nam architecto perferendis, veniam possimus, voluptatem laboriosam facere debitis. Commodi, omnis architecto!</p>
                 <a href="#">CONTINUE READING</a>
             </div>
             <h1>13/01</h1>
