--- a/shop.html
+++ b/shop.html
@@ -372,7 +372,7 @@
             <img src="/images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>© 2022, uccy created HTML/CSS Ecommerce</p>
+            <p>© 2022, uche created HTML/CSS Ecommerce</p>
         </div>
     </footer>
 
