--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <div>
             <h2>Who We Are?</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam nobis in explicabo id dolor dolorum sit, distinctio, qui ab, aut similique. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis ipsa aut soluta fuga molestiae porro nostrum vitae facilis assumenda ipsam! Aspernatur at deleniti et vel distinctio eos temporibus sint voluptatum.</p>
-            <abbr title="">Lorem ipsum dolor sit amet rem quod commodi aliquam saepe laudantium, debitis eligendi quisquam eos eius nobis aut perspiciatis praesentium a harum sunt? lo</abbr>
+            <abbr title="">Lorem ipsum aliquam saepe laudantium, debitis eligendi quisquam eos eius nobis aut perspiciatis praesentium a harum sunt? lo</abbr>
             
             <br><br>
 
