--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
        <div class="people">
            <div>
                <img src="/images/people/1.png" alt="">
-               <p><span>Ojo Akpan</span>Senior Marketing manager <br> phone: +23480386453 <br> email: sampleemail@mail.com </p>
+               <p><span>Ojo Akpan</span>Senior Marketing manager email: sampleemail@mail.com </p>
            </div>
            <div>
                <img src="/images/people/2.png" alt="">
