--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
            </div>
            <div>
                <img src="/images/people/2.png" alt="">
-               <p><span>Kola Daniel</span> Sales Rep<br> phone: +23480874553 <br> email: sampleemail@mail.com </p>
+               <p><span>Kola Daniel</span> Sales Rep<br> phone: +23480874553 <br> email: sampleemail@email.com </p>
            </div>
            <div>
                <img src="/images/people/3.png" alt="">
