--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam nobis in id, qui ab. ipsum dolor, amet consectetur adipisicing elit. Quis ipsa aut soluta fuga molestiae porro nostrum vitae facilis assumenda ipsam! Aspernatur at deleniti et vel distinctio eos temporibus sint voluptatum.</p>
             <br><br>
 
-            <marquee bgcolor="#ccc" behavior="alternate" scrolldelay="100" scrollamount="5" width="100%">Lorem ipsu elit. Quae sint, error ad vitae enim? Obcaecati, eius nemo. Consequatur id perferendis assumenda provident aut delectus minus. Sunt doloribus consequuntur aliquam!</marquee>
+            <marquee bgcolor="#ccc" behavior="alternate" scrolldelay="100" scrollamount="5" width="100%">Lorem ipsu. Quae sint, error ad vitae enim? Obcaecati, eius nemo. Consequatur id perferendis assumenda provident aut delectus minus. Sunt doloribus consequuntur aliquam!</marquee>
         </div>
     </section>
 
