--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <img src="/images/about/a6.jpg" alt="">
         <div>
             <h2>Who We Are?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam nobis in id, qui ab. dolor. Quis aut fuga molestiae porro nostrum vitae facilis assumenda ipsam! Aspernatur at deleniti et vel distinctio eos temporibus sint voluptatum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam nobis in id, qui ab. dolor. aut fuga molestiae porro nostrum vitae facilis assumenda ipsam! Aspernatur at deleniti et vel distinctio eos temporibus sint voluptatum.</p>
             <br><br
 
             <marquee bgcolor="#ccc" behavior="alternate" scrolldelay="100" scrollamount="5" width="100%">Lorem ipsu. sint, ad, nemo. Consequatur id perferendis assumenda provident aut delectus minus. Sunt doloribus consequuntur aliquam!</marquee>
