--- a/sproduct2.html
+++ b/sproduct2.html
@@ -66,7 +66,7 @@
             <input type="number" value="1" />
             <button class="normal">Add To Cart</button>
             <h4>Product Details</h4>
-            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, assumenda repudiandae ducimus dolor eum possimus doloremque. Exercitationem quos nihil officia quia? Velit inventore iusto quam enim expedita adipisci harum nihil! Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi non dolor, deleniti animi minima quos ipsam veritatis tenetur consequuntur consectetur nisi quam. Aperiam tempore deleniti corrupti. Saepe veniam ab esse.</span>
+            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, assumenda repudiandae ducimus dolor eum doloremque. Exercitationem quos nihil officia quia? Velit inventore iusto quam enim expedita adipisci harum nihil! Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi non dolor, deleniti animi minima quos ipsam veritatis tenetur consequuntur consectetur nisi quam. Aperiam tempore deleniti corrupti. Saepe veniam ab esse.</span>
         </div>
     </section>
 
